--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-12.82MB/s(Youtube:不良林), server: x.mceee.xyz, port: 26011, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-340.4KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-496.5KB/s(Youtube:不良林), server: jpcu.dfnode.top, port: 30004, type: vmess, uuid: a6ef37c5-1a0f-3204-8ca6-fa7a18c062c1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: jpcu.dfnode.top}}
-  - {name: 🇺🇸 美国-1.28MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.24MB/s(Youtube:不良林), server: shcm.pdjc.cc, port: 42000, type: trojan, password: b7dcc148-c8a3-4173-931f-8ecf9413eb58, sni: shcm.pdjc.cc, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.15MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.41MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.94MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林), server: 93.179.112.142, port: 54317, type: vmess, uuid: faeb79e5-6549-4b08-8e87-3d7c5457930d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-414.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇺🇸 美国-250.5KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.39MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.58MB/s(Youtube:不良林), server: 45.142.167.24, port: 443, type: trojan, password: Aymde8JN7M25qaTPRg, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.41MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇰🇷 韩国-2.00MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-350.9KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.05MB/s(Youtube:不良林), server: vjp1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp1.0bad.com}}
+  - {name: 🇨🇳 中国-616.8KB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.47MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇭🇰 香港-1.01MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-12.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-340.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-496.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-250.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇩🇪 德国-350.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-616.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-12.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-340.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-496.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-250.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇩🇪 德国-350.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-616.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-12.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-340.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-496.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-250.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇩🇪 德国-350.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-616.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-12.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-340.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-496.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-250.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇩🇪 德国-350.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-616.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-12.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-340.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-496.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-250.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇩🇪 德国-350.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-616.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-12.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-340.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-496.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-250.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇩🇪 德国-350.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-616.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-12.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-340.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-496.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-250.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇩🇪 德国-350.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-616.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
