--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.41MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.01MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.79MB/s(Youtube:不良林), server: 104.243.30.252, port: 246, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
-  - {name: 🇺🇸 美国-3.99MB/s(Youtube:不良林), server: 93.179.112.142, port: 54317, type: vmess, uuid: faeb79e5-6549-4b08-8e87-3d7c5457930d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-2.06MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
   - {name: 🇯🇵 日本-4.00MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.56MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-2.06MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
   - {name: 🇺🇸 美国-3.80MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-3.50MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-2.56MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.41MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.02MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: f0de3134-aef4-45b5-a135-3a82321bbac6, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-12.60MB/s(Youtube:不良林), server: vjp3.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp3.0bad.com}}
+  - {name: 🇺🇸 美国-7.42MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-414.8KB/s(Youtube:不良林), server: 611hk01.fans8.xyz, port: 443, type: trojan, password: 0e90d359-1733-4994-a195-4df768a18e99, sni: 611hk01.fans8.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
