--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-4.00MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-2.06MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-3.80MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.56MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.41MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.02MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: f0de3134-aef4-45b5-a135-3a82321bbac6, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-12.60MB/s(Youtube:不良林), server: vjp3.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp3.0bad.com}}
-  - {name: 🇺🇸 美国-7.42MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
+  - {name: 未知国家-2.80MB/s(Youtube:不良林), server: 193.178.210.29, port: 443, type: trojan, password: iKR3Ft, skip-cert-verify: true}
   - {name: 🇨🇳 中国-414.8KB/s(Youtube:不良林), server: 611hk01.fans8.xyz, port: 443, type: trojan, password: 0e90d359-1733-4994-a195-4df768a18e99, sni: 611hk01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.28MB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.36MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.31MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇩🇪 德国-5.39MB/s(Youtube:不良林), server: mixv4-28.194610.xyz, port: 4430, type: vmess, uuid: e9bb0c5c-01c7-7907-c454-3b8b6d472b19, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /a185d5dc-c726-466c-98f2-ba494e63695f, ws-headers: {Host: mixv4-28.194610.xyz}}
+  - {name: 🇯🇵 日本-5.17MB/s(Youtube:不良林), server: 150.230.60.8, port: 26195, type: vmess, uuid: 8c44be2e-2e16-4cf4-db1e-a1c8c61b7fd4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1007.9KB/s(Youtube:不良林), server: mixv4-1.194610.xyz, port: 4439, type: vmess, uuid: e9bb0c5c-01c7-7907-c454-3b8b6d472b19, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /a185d5dc-c726-466c-98f2-ba494e63695f, ws-headers: {Host: mixv4-1.194610.xyz}}
+  - {name: 🇯🇵 日本-10.05MB/s(Youtube:不良林), server: mixv4-27.194610.xyz, port: 443, type: vmess, uuid: e9bb0c5c-01c7-7907-c454-3b8b6d472b19, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /a185d5dc-c726-466c-98f2-ba494e63695f, ws-headers: {Host: mixv4-27.194610.xyz}}
+  - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: gcfree2.galaxy-cloud.icu, port: 443, type: vmess, uuid: 99498865-751d-4889-8349-51301fa3d930, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /tDZcCqc, ws-headers: {Host: gcfree2.galaxy-cloud.icu}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-4.00MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.42MB/s(Youtube:不良林)
+      - 未知国家-2.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-5.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-4.00MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.42MB/s(Youtube:不良林)
+      - 未知国家-2.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-5.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-4.00MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.42MB/s(Youtube:不良林)
+      - 未知国家-2.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-5.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-4.00MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.42MB/s(Youtube:不良林)
+      - 未知国家-2.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-5.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-4.00MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.42MB/s(Youtube:不良林)
+      - 未知国家-2.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-5.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-4.00MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.42MB/s(Youtube:不良林)
+      - 未知国家-2.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-5.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-4.00MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.42MB/s(Youtube:不良林)
+      - 未知国家-2.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-5.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
